Fixed layout issue in mobile view.

--- a/public/stylesheets/mobilestyle.css
+++ b/public/stylesheets/mobilestyle.css
@@ -70,8 +70,8 @@ input {
 }
 
 /* LIFELIST SETTINGS */
-.lifelist {
-    width: 98.6%;
+.lifelists {
+    width: 100%;
 }
 
 /* CHAT SETTINGS */
